# physics-engine-from-scratch

./: .gitigore  CMakeLists.txt  LICENSE  README.md
Core/Math/: Mat2.cpp  Mat2.h  MathUtils.cpp  MathUtils.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
Demo/: main.cpp
Tests/: Mat2Tests.cpp  MathUtilsTests.cpp  Vec2Tests.cpp  Vec3Tests.cpp
